Download zip (fix)

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -62,7 +62,7 @@
       <div class="installation-box">
         <div class="installation-steps">
           <a href="/svag.zip" download class="step download-btn">
-            Download svag
+            Download svag <v1 class="version">v1.0</v1>
           </a>
           <span class="step secondary">Unzip in your computer</span>
           <button onclick="openChromeExtensions(event)" class="step link copy-btn" title="Click to copy">chrome://extensions/</button>
