--- a/pages/landing.css
+++ b/pages/landing.css
@@ -165,6 +165,14 @@ body {
   transition: all 0.2s ease;
 }
 
+.version {
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  padding-left: 4px;
+}
+
 .step.link.copy-btn:hover {
   opacity: 0.8;
 }
