Feat: Update svag.zip and switch to GitHub Releases for distribution

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -48,7 +48,7 @@
             </defs>
           </svg>
           <div class="badge-text">
-            <a href="/svag.zip" download>Chrome extension</a>
+            <a href="https://github.com/strycekjogurt/svag/releases/download/v1.0/svag.zip" download>Chrome extension</a>
             <span>that saves time</span>
           </div>
         </div>
@@ -61,8 +61,8 @@
       <!-- Installation Steps -->
       <div class="installation-box">
         <div class="installation-steps">
-          <a href="/svag.zip" download class="step download-btn">
-            Download svag <v1 class="version">v1.0</v1>
+          <a href="https://github.com/strycekjogurt/svag/releases/download/v1.0/svag.zip" download class="step download-btn">
+            Download svag
           </a>
           <span class="step secondary">Unzip in your computer</span>
           <button onclick="openChromeExtensions(event)" class="step link copy-btn" title="Click to copy">chrome://extensions/</button>
