Dowoadn zip (fix)

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -48,7 +48,7 @@
             </defs>
           </svg>
           <div class="badge-text">
-            <a href="https://github.com/strycekjogurt/svag/releases/download/v1.0/svag.zip" download>Chrome extension</a>
+            <a href="https://github.com/strycekjogurt/svag/releases/latest/download/svag.zip" download>Chrome extension</a>
             <span>that saves time</span>
           </div>
         </div>
@@ -61,7 +61,7 @@
       <!-- Installation Steps -->
       <div class="installation-box">
         <div class="installation-steps">
-          <a href="https://github.com/strycekjogurt/svag/releases/download/v1.0/svag.zip" download class="step download-btn">
+          <a href="https://github.com/strycekjogurt/svag/releases/latest/download/svag.zip" download class="step download-btn">
             Download svag
           </a>
           <span class="step secondary">Unzip in your computer</span>
