--- a/views/gallery/gallery.ejs
+++ b/views/gallery/gallery.ejs
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG Gallery - svag</title>
+  <link rel="icon" type="image/png" sizes="128x128" href="/icons/icon128.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/icons/icon48.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon16.png">
   <script src="https://js.stripe.com/v3/"></script>
   <link rel="stylesheet" href="/Gallery/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
