--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - SVAG</title>
+  <link rel="icon" type="image/png" sizes="128x128" href="/icons/icon128.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/icons/icon48.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon16.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { 
