--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -64,7 +64,7 @@
       <div class="installation-box">
         <div class="installation-steps">
           <a href="https://github.com/strycekjogurt/svag/releases/latest/download/svag.zip" download class="step download-btn">
-            Download svag
+            Download svag <span class="version">v1.0</span>
           </a>
           <span class="step secondary">Unzip in your computer</span>
           <button onclick="openChromeExtensions(event)" class="step link copy-btn" title="Click to copy">chrome://extensions/</button>
